[package]
name = "garbage_collector"
version = "0.1.0"
edition = "2024"

[dependencies]
byte-unit = "5.2.0"
crossbeam-channel = "0.5.15"
lazy_static = "1.5.0"
native-windows-derive = "1.0.5"
native-windows-gui = "1.0.13"
walkdir = "2.5.0"
windows-sys = { version = "0.61.2", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_System_ProcessStatus"] }
winreg = "0.56.0"
winres = "0.1.12"

[build-dependencies]
winres = "0.1.12"
